# eschoolauth

./: README.md  manage.py  pyproject.toml  test.rest
autheschool/: asgi.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
