[tool.poetry]
name = "autheschool"
version = "0.1.0"
description = ""
authors = ["Asiimawe Pablo <pasiimawe@gmail.com>"]
license = "\"MIT\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
